Replaces content on index and about

--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Business Casual - Start Bootstrap Theme</title>
+        <title>Joe's BBQ</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -43,50 +43,50 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-5">
-                                <span class="section-heading-upper">Come On In</span>
-                                <span class="section-heading-lower">We're Open</span>
+                                <span class="section-heading-upper">Call Us</span>
+                                <span class="section-heading-lower">Our Rates</span>
                             </h2>
                             <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Sunday
-                                    <span class="ms-auto">Closed</span>
+                                    Package 1
+                                    <span class="ms-auto">Something</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Monday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    Package 1
+                                    <span class="ms-auto">Price</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Tuesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    Package 1
+                                    <span class="ms-auto">spmething</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Wednesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    Package 1
+                                    <span class="ms-auto">something</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Thursday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    Package
+                                    <span class="ms-auto">somthign</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Friday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    Package
+                                    <span class="ms-auto">Something</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Saturday
-                                    <span class="ms-auto">9:00 AM to 5:00 PM</span>
+                                    Package
+                                    <span class="ms-auto">SOmthing</span>
                                 </li>
                             </ul>
                             <p class="address mb-5">
                                 <em>
                                     <strong>1116 Orchard Street</strong>
                                     <br />
-                                    Golden Valley, Minnesota
+                                    Howard Beach, NY 11111
                                 </em>
                             </p>
                             <p class="mb-0">
                                 <small><em>Call Anytime</em></small>
                                 <br />
-                                (317) 585-8468
+                                (555) 585-8468
                             </p>
                         </div>
                     </div>
@@ -101,10 +101,10 @@
                         <div class="col-xl-9 col-lg-10 mx-auto">
                             <div class="bg-faded rounded p-5">
                                 <h2 class="section-heading mb-4">
-                                    <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                                    <span class="section-heading-lower">About Our Cafe</span>
+                                    <span class="section-heading-upper">Quality Meats, Quality Service</span>
+                                    <span class="section-heading-lower">About Our Services</span>
                                 </h2>
-                                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ornare purus eu fermentum maximus. Curabitur sagittis tortor non pretium aliquam. Nam turpis odio, dictum gravida leo eu, scelerisque aliquam dolor. Nullam at urna tellus. Donec fringilla condimentum neque. Nam pharetra velit pretium, tincidunt lorem id, tristique tellus. Mauris tortor elit, malesuada sed quam vel, porta cursus metus. Proin a tortor gravida, ultricies diam vehicula, tempor erat. Maecenas sagittis nisi ac nisi eleifend maximus. Etiam id mi eu justo luctus finibus. Aenean sed metus quis turpis iaculis commodo. Nunc vehicula aliquam erat a tincidunt.</p>
                                 <p class="mb-0">
                                     We guarantee that you will fall in
                                     <em>lust</em>
